examples/java/failing/left_right_class/Left.java
class MyCls {
        int a;
        boolean c;
        char d;
}
